feat: update cache

--- a/test/index.html
+++ b/test/index.html
@@ -10,31 +10,31 @@
   <body>
 
     <div style="width:800px; padding:200px; margin: 200 auto;">
-      <h1 style='font-size: 18px'>Combo Example</h1>
+      <h1 style='font-size: 24px'>Combo Example</h1>
 
-      <h2 style='font-size: 16px'>combo css</h2>
+      <h2 style='font-size: 18px'>combo css</h2>
       <p>
-        <a href="http://127.0.0.1:5000/co??v/c/reset.css,v/c/test.css">http://127.0.0.1:5000/co??v/c/reset.css,v/c/test.css</a>
+        <a href="http://127.0.0.1:5000/co??v/c/reset.css,v/c/test.css&hash=2132132">http://127.0.0.1:5000/co??v/c/reset.css,v/c/test.css&hash=2132132</a>
       </p>
       <p>
-        <a href="http://127.0.0.1:5000/co;v??c/reset.css,c/test.css">http://127.0.0.1:5000/co;v??c/reset.css,c/test.css</a>
+        <a href="http://127.0.0.1:5000/co;v??c/reset.css,c/test.css&hash=2132132">http://127.0.0.1:5000/co;v??c/reset.css,c/test.css&hash=2132132</a>
       </p>
       <p>
-        <a href="http://127.0.0.1:5000/co;v/c??reset.css,test.css">http://127.0.0.1:5000/co;v/c??reset.css,test.css</a>
+        <a href="http://127.0.0.1:5000/co;v/c??reset.css,test.css&hash=2132132">http://127.0.0.1:5000/co;v/c??reset.css,test.css&hash=2132132</a>
       </p> <br />
 
       <h2 style='font-size: 16px'>combo javascript</h2>
       <p>
-        <a href="http://127.0.0.1:5000/co??v/l/vloader.js,v/l/vue.js">http://127.0.0.1:5000/co??v/l/vloader.js,v/l/vue.js</a>
+        <a href="http://127.0.0.1:5000/co??v/l/vloader.js,v/l/vue.js&hash=2132132">http://127.0.0.1:5000/co??v/l/vloader.js,v/l/vue.js&hash=2132132</a>
       </p>
       <p>
-        <a href="http://127.0.0.1:5000/co;v??l/vloader.js,l/vue.js">http://127.0.0.1:5000/co;v??l/vloader.js,l/vue.js</a>
+        <a href="http://127.0.0.1:5000/co;v??l/vloader.js,l/vue.js&hash=2132132">http://127.0.0.1:5000/co;v??l/vloader.js,l/vue.js&hash=2132132</a>
       </p>
       <p>
-        <a href="http://127.0.0.1:5000/co;v/l??vloader.js,vue.js">http://127.0.0.1:5000/co;v/l??vloader.js,vue.js</a>
+        <a href="http://127.0.0.1:5000/co;v/l??vloader.js,vue.js&hash=2132132">http://127.0.0.1:5000/co;v/l??vloader.js,vue.js&hash=2132132</a>
       </p>
     </div>
-    <script src='http://127.0.0.1:5000/co??v/l/vloader.js,v/l/vue.js,v/p/index.js'></script>
+    <script src='http://127.0.0.1:5000/co??v/l/vloader.js,v/l/vue.js,v/p/index.js&hash=2132132'></script>
   </body>
 
 </html>
